described each code file

--- a/nb_endpoint.ipynb
+++ b/nb_endpoint.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "173cfe1f",
+   "metadata": {},
+   "source": [
+    "Jupyter Notebook that executes metric calculations for locally uploaded RDF files.\n",
+    "\n",
+    "It imports functions from my_metrics.py and metrics_loader.py, computes selected metrics,\n",
+    "\n",
+    "and writes the resulting metric table to a CSV file (consumed by the Streamlit app)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "612d9e07",
