--- a/nb_file.ipynb
+++ b/nb_file.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "447cda96",
+   "metadata": {},
+   "source": [
+    "Jupyter Notebook analogous to nb_file.ipynb, but designed for SPARQL endpoints instead of local files.\n",
+    "\n",
+    "It queries the endpoint via SPARQLWrapper, performs metric computations,\n",
+    "\n",
+    "and exports the computed metric values to a CSV file for Streamlit integration."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "9049018a",
