--- a/nb_file.ipynb
+++ b/nb_file.ipynb
@@ -37,7 +37,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd, scrapbook as sb\n",
-    "from metrics_loader import load_graph_from_file\n",
+    "from graph_loader import load_graph_from_file\n",
     "import my_metrics as mm\n",
     "\n",
     "# Load RDF graph data from the specified path.\n",
